Implemented auth with JWT
