# src/main/java/dev/brkovic/fridge/tracker/entity/RefreshTokenEntity.java
@@ -1,0 +1,26 @@
+package dev.brkovic.fridge.tracker.entity;
+
+import jakarta.persistence.Column;
+import jakarta.persistence.Entity;
+import jakarta.persistence.Table;
+import lombok.Getter;
+import lombok.NoArgsConstructor;
+import lombok.Setter;
+
+import java.time.LocalDateTime;
+
+@Entity
+@Table(name = "refresh_token")
+@Getter
+@Setter
+@NoArgsConstructor
+public class RefreshTokenEntity extends BaseEntity {
+    @Column(name = "username")
+    private String username;
+
+    @Column(name = "token")
+    private String token;
+
+    @Column(name = "expires_at")
+    private LocalDateTime expiresAt;
+}
